# mc-trimmer

./: .gitignore  README.md  pyproject.toml
mc_trimmer/: __init__.py  cli.py  commands.py  entities.py  main.py  mca_selector.py  pipeline.py  primitives.py  regions.py
tests/: test_all.py
