[project]
name = "mc_trimmer"
dynamic = ["version"]
description = ""
authors = [{ name = "Dw4lt" }]
dependencies = [
    "NBT>=1.5.1",
    "multiprocess>=0.70.18",
    "rich>=14.1.0",
    "pydantic>=2.11.7",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }


[project.scripts]
mctrimmer = "mc_trimmer.__main__:run"


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--rootdir=. --capture=tee-sys -v -o console_output_style=classic"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] (%(filename)s:%(lineno)s): %(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.setuptools.dynamic]
version = { attr = "mc_trimmer.__version__.__version__" }

[tool.black]
line-length = 120

[dependency-groups]
dev = ["black>=25.1.0", "pytest>=8.4.1"]
